[tool.poetry]
name = "meme-fastapi"
version = "0.1.0"
description = ""
authors = ["Max Radzey <max.radzey@yandex.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
aiosqlite = "^0.20.0"
SQLAlchemy = {extras = ["asyncaio"], version = "^2.0.31"}
uvicorn = "^0.30.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
